Fix trailblock refresh logic

--- a/admin/app/views/fronts.scala.html
+++ b/admin/app/views/fronts.scala.html
@@ -50,46 +50,69 @@
         <div class="lists" data-bind="foreach: listsDisplayed">
             <div class="trailblock">
                 <div class="list-header">
-                    <a class="list-header__hide" data-bind="click: $parent.dropList">HIDE</a>
+                    <a data-bind="click: toggleShowSettings" class="list-header__showSettings"><i class="icon-cog icon-white"></i></a>
+                    <a data-bind="click: $parent.dropList" class="list-header__hide">HIDE</a>
                     <div class="list-header__title" data-bind="foreach: crumbs">
                         <span class="list-header__title__part" data-bind="text: $data"></span> 
                     </div>
-                    <div class="list-header__meta">
-                        <!-- ko if: state.timeAgo -->
-                            updated <span class="list-header__meta__last-updated" data-bind="text: state.timeAgo"></span> 
-                            by <a class="list-header__meta__user" data-bind="
-                                text: meta.updatedBy,
-                                attr: {href: 'mailto:' + meta.updatedEmail}
-                                "></a>
-                        <!-- /ko -->
-                        <!-- ko ifnot: state.timeAgo -->
-                            Empty
-                        <!-- /ko -->
-                    </div>
-                    <div class="list-header__status">
-                        <div class="list-header__status__live" data-bind="
-                            css: {
-                                active: state.liveMode()
-                            }">
-                            <span class="list-header__status__live__title" data-bind="click: setLiveMode">LIVE</span>
-                        </div>                    
-                        <div class="list-header__status__draft" data-bind="
-                            css: {
-                                active: !state.liveMode(),
-                                hasUnPublishedEdits: state.hasUnPublishedEdits()
-                            }">
-                            <span class="list-header__status__draft__title" data-bind="click: setDraftMode">
-                                DRAFT
-                                <span data-bind="if: state.hasUnPublishedEdits()">
-                                    has edits
+                    <div data-bind="visible: !state.editingConfig()">
+                        <div class="list-header__meta">
+                            <!-- ko if: state.timeAgo -->
+                                updated <span class="list-header__meta__last-updated" data-bind="text: state.timeAgo"></span> 
+                                by <a class="list-header__meta__user" data-bind="
+                                    text: meta.updatedBy,
+                                    attr: {href: 'mailto:' + meta.updatedEmail}
+                                    "></a>
+                            <!-- /ko -->
+                            <!-- ko ifnot: state.timeAgo -->
+                                Empty
+                            <!-- /ko -->
+                        </div>
+                        <div class="list-header__status">
+                            <div class="list-header__status__live" data-bind="
+                                css: {
+                                    active: state.liveMode()
+                                }">
+                                <span class="list-header__status__live__title" data-bind="click: setLiveMode">LIVE</span>
+                            </div>                    
+                            <div class="list-header__status__draft" data-bind="
+                                css: {
+                                    active: !state.liveMode(),
+                                    hasUnPublishedEdits: state.hasUnPublishedEdits()
+                                }">
+                                <span class="list-header__status__draft__title" data-bind="click: setDraftMode">
+                                    DRAFT
+                                    <span data-bind="if: state.hasUnPublishedEdits()">
+                                        has edits
+                                    </span>
                                 </span>
-                            </span>
-                            <span data-bind="if: !state.liveMode() && state.hasUnPublishedEdits()">
-                                &middot; <a class="list-header__status__control" data-bind="click: publishDraft">publish</a>
-                                &middot; <a class="list-header__status__control" data-bind="click: discardDraft">discard</a>
-                            </span>
+                                <span data-bind="if: !state.liveMode() && state.hasUnPublishedEdits()">
+                                    &middot; <a class="list-header__status__control" data-bind="click: publishDraft">publish</a>
+                                    &middot; <a class="list-header__status__control" data-bind="click: discardDraft">discard</a>
+                                </span>
+                            </div>                    
                         </div>                    
                     </div>                    
+                </div>
+                <div class="list-config" data-bind="visible: state.editingConfig">
+                    <div>
+                        Number of articles:
+                    </div>
+                    <div>
+                        <input type="text" class="tiny" data-bind="value: config.min"/> Minumum
+                    </div>
+                    <div>
+                        <input type="text" class="tiny" data-bind="value: config.max"/> Maximum
+                    </div>
+                    <div>
+                        ContentApi query for trail automation:
+                        <input type="text" data-bind="value: config.contentApiQuery"/>
+                    </div>
+                    <input type="submit" class="btn" value="Save Settings" data-bind="click: saveConfig"/>
+                </div>
+                <div class="needs-more" data-bind="if: needsMore">
+                    Needs at least <span class="needs-more__num" data-bind="text: config.min"></span> 
+                    article<span data-bind="text: config.min() > 1 ? 's' : ''"></span>
                 </div>
                 <div class="connectedList" data-bind="
                     attr: {
@@ -98,30 +121,6 @@
                     },
                     css: {pending: state.loadIsPending},
                     template: {name: 'template_article', foreach: state.liveMode() ? live : draft}"></div>
-
-                <div class="needs-more" data-bind="if: needsMore">
-                    Needs at least <span class="needs-more__num" data-bind="text: config.min"></span> 
-                    article<span data-bind="text: config.min() > 1 ? 's' : ''"></span>
-                </div>
-                <div class="list-footer" data-bind="css: {editable: state.editingConfig}">
-                    <a data-bind="click: toggleShowSettings">Settings</a>
-                    <div data-bind="visible: state.editingConfig" class="settings">
-                        <div>
-                            Number of articles:
-                        </div>
-                        <div>
-                            <input type="text" class="tiny" data-bind="value: config.min"/> Minumum
-                        </div>
-                        <div>
-                            <input type="text" class="tiny" data-bind="value: config.max"/> Maximum
-                        </div>
-                        <div>
-                            ContentApi query for trail automation:
-                            <input type="text" data-bind="value: config.contentApiQuery"/>
-                        </div>
-                        <input type="submit" class="btn" value="Save Settings" data-bind="click: saveConfig"/>
-                    </div>
-                </div>
             </div>
         </div>
     </div>
