--- a/admin/app/views/fronts.scala.html
+++ b/admin/app/views/fronts.scala.html
@@ -138,7 +138,7 @@
 
             <div class="trail__meta">
                 <span data-bind="html: _humanDate() ? _humanDate : 'Loading...'"></span>
-                <a data-bind="attr: {href: 'http://m.guardian.co.uk/' + id()}">view</a>
+                <a data-bind="attr: {href: 'http://www.theguardian.com/' + id()}">view</a>
                 <a data-bind="attr: {href: 'http://dashboard.ophan.co.uk/summary?path=/' + id()}">stats</a>
             </div>
 
