--- a/common/app/views/fragments/header.scala.html
+++ b/common/app/views/fragments/header.scala.html
@@ -26,7 +26,7 @@
         </a>
 
         @if(SearchSwitch.isSwitchedOn) {
-            <a href="https://www.google.co.uk/advanced_search?q=site:www.guardian.co.uk" data-is-ajax data-link-name="Search icon" class="control control--search" data-control-for="nav-popup-search">
+            <a href="https://www.google.co.uk/advanced_search?q=site:www.theguardian.com" data-is-ajax data-link-name="Search icon" class="control control--search" data-control-for="nav-popup-search">
                 <i class="i i-nav-divider"></i>
                 <span class="h">Search</span>
                 <i class="i i-search"></i>
