--- a/common/app/assets/stylesheets/module/_cta.scss
+++ b/common/app/assets/stylesheets/module/_cta.scss
@@ -45,7 +45,7 @@ button.cta {
         background-color: $darkBlue;
         border: none; //To normailse <button> styles
         border-top: 1px solid #2B528B;
-        padding: $baseline*2 $gutter $baseline*2 $gutter;
+        padding: $baseline*2 $gutter;
     }
 }
 
