--- a/common/app/assets/stylesheets/module/_footer.scss
+++ b/common/app/assets/stylesheets/module/_footer.scss
@@ -28,7 +28,7 @@
         @extend %type-11;
         width: 42%;
         margin: 0;
-        padding: $baseline*2 $gutter 0 $gutter;
+        padding: $baseline*2 $gutter 0;
         float: left;
         color: $blue;
 
