--- a/common/app/assets/stylesheets/module/_lightbox-gallery.scss
+++ b/common/app/assets/stylesheets/module/_lightbox-gallery.scss
@@ -56,7 +56,7 @@ $thumbnailOuterWidth: 156px; // 140px + 16px margins
 
     .gallery__item {
         float: left;
-        margin: $gutter / 2;
+        margin: $baseline * 2;
     }
 
     .gallery__item--portrait {
@@ -106,6 +106,7 @@ $thumbnailOuterWidth: 156px; // 140px + 16px margins
 /* ==========================================================================
    Image container
    ========================================================================== */
+
 .gallery__img {
     width: 100%;
     margin-bottom: 0;
@@ -115,6 +116,7 @@ $thumbnailOuterWidth: 156px; // 140px + 16px margins
 /* ==========================================================================
    Navigation
    ========================================================================== */
+
 .gallery__nav {
     width: 70px;
     height: 100%;
@@ -292,6 +294,7 @@ $thumbnailOuterWidth: 156px; // 140px + 16px margins
 /* ==========================================================================
    Swipe styles
    ========================================================================== */
+
 .gallery--swipe {
     overflow: hidden;
 
@@ -313,4 +316,3 @@ $thumbnailOuterWidth: 156px; // 140px + 16px margins
         display: none;
     }
 }
-
