--- a/common/app/assets/stylesheets/module/nav/_pop-up.scss
+++ b/common/app/assets/stylesheets/module/nav/_pop-up.scss
@@ -66,7 +66,7 @@
         @extend %type-7;
 
         @include mq(tablet) {
-            padding: $baseline*3 0 $baseline*3 0;
+            padding: $baseline*3 0;
             @include font($serifheadline, 200, 14, 14);
         }
     }
