ReAlign article zone with content

--- a/common/app/assets/stylesheets/module/_article.scss
+++ b/common/app/assets/stylesheets/module/_article.scss
@@ -5,8 +5,8 @@ $a-rightCol-trigger: gs-span(11) + $gutter*2;
 
 .article-zone {
     padding: 13px 0 14px;
-    margin-left: $gs-gutter;
-    margin-right: $gs-gutter;
+    margin-left: $gutter;
+    margin-right: $gutter;
     font-weight: bolder;
     line-height: 1;
     border-bottom: 1px solid $mushroom;
