--- a/admin/app/views/fronts.scala.html
+++ b/admin/app/views/fronts.scala.html
@@ -104,10 +104,8 @@
                     <div>
                         <input type="text" class="tiny" data-bind="value: config.max"/> Maximum
                     </div>
-                    <div>
-                        ContentApi query for trail automation:
-                        <input type="text" data-bind="value: config.contentApiQuery"/>
-                    </div>
+                    <div>ContentApi query for trail automation:</div>
+                    <input type="text" data-bind="value: config.contentApiQuery"/>
                     <input type="submit" class="btn" value="Save" data-bind="click: saveConfig"/>
                     <button class="btn" value="Cancel" data-bind="click: stopEditingConfig">Cancel</button>
                 </div>
