Added signout link

--- a/common/app/assets/stylesheets/module/nav/_control.scss
+++ b/common/app/assets/stylesheets/module/nav/_control.scss
@@ -199,7 +199,8 @@ span.control__menu.i-menu {
     &:active,
     &:hover,
     &:visited,
-    &:focus { color: #fff; }
+    &:focus     { color: #fff; }
+    &.is-active { color: $blue; }
 
     @include mq(tablet) {
         position: absolute;
