--- a/identity/app/views/fragments/topbar/notsignedin.scala.html
+++ b/identity/app/views/fragments/topbar/notsignedin.scala.html
@@ -1,2 +1,7 @@
 @()
-Sign in
+<a href="/signin" data-link-name="User profile"
+    class="control control--profile">
+    <i class="i i-nav-divider"></i>
+    <span class="js-profile-info control--profile__info">Sign in</span>
+    <i class="i i-profile"></i>
+</a>
