experimenting with no fade at all on ears

--- a/common/app/assets/stylesheets/module/experiments/_ears.scss
+++ b/common/app/assets/stylesheets/module/experiments/_ears.scss
@@ -9,9 +9,9 @@
 
     //For fading
     opacity: 1;
-    transition: opacity 0.5s ease-out;
-    -moz-transition: opacity 0.5s ease-out;
-    -webkit-transition: opacity 0.5s ease-out;
+    //transition: opacity 0.5s ease-out;
+    //-moz-transition: opacity 0.5s ease-out;
+    //-webkit-transition: opacity 0.5s ease-out;
 
     i { text-indent: -9999px; }
 
