--- a/facia/app/views/fragments/frontBlock.scala.html
+++ b/facia/app/views/fragments/frontBlock.scala.html
@@ -18,9 +18,10 @@
         data-section-id="@block.description.id">
 
         @block.description.style match {
-            case Some(Thumbnail) => { @trailblocks.thumbnail(block.trails, block.description.numItemsVisible) }
-            case Some(Headline)  => { @trailblocks.headline(block.trails, block.description.numItemsVisible) }
-            case _               => { @trailblocks.featured(block.trails, block.description.numItemsVisible) }
+            case Some(Thumbnail)    => { @trailblocks.thumbnail(block.trails, block.description.numItemsVisible) }
+            case Some(Headline)     => { @trailblocks.headline(block.trails, block.description.numItemsVisible) }
+            case Some(SectionFront) => { @trailblocks.section(block.trails, block.description.numItemsVisible, numWithImages = 3 ) }
+            case _                  => { @trailblocks.featured(block.trails, block.description.numItemsVisible) }
         }
     </div>
 
