Spaces for classes on forms

--- a/identity/app/views/signin.scala.html
+++ b/identity/app/views/signin.scala.html
@@ -5,7 +5,7 @@
 
 @main(page, Switches.all){
 }{
-<form class="form" novalidate action="/signin?error" role="main">
+<form class="form" novalidate action="/signin" role="main">
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut eu pharetra sapien</p>
     <ul class="form-fields">
 
