Added publisher tag to all pages

--- a/common/app/views/fragments/metaData.scala.html
+++ b/common/app/views/fragments/metaData.scala.html
@@ -15,6 +15,9 @@
         }
     }
 
+    @* https://support.google.com/plus/answer/1713826 *@
+    <link rel="publisher" href="https://plus.google.com/113000071431138202574"/>
+
     <link rel="shortcut icon" type="image/png" href="@Static("images/favicons/32x32.ico")" />
 
     <link rel="apple-touch-icon" sizes="144x144" href="@Static("images/favicons/144x144.png")" />
