--- a/admin/public/css/style.css
+++ b/admin/public/css/style.css
@@ -704,6 +704,8 @@ a.cta, .cta a {
     font-weight: bold;
     margin: 0;
     padding: 0 0 5px 0;
+    text-decoration: none;
+    color: #000;
 }
 
 .fronts .trail .webTitle--override {
@@ -730,7 +732,7 @@ a.cta, .cta a {
     display: none;
 }
 
-.fronts .trail:hover .trail__meta a {
+.fronts .persisted .trail:hover .trail__meta a {
     display: inline-block;
     color: #666;
     border-left: 1px #ddd solid;
