--- a/common/app/views/fragments/footer.scala.html
+++ b/common/app/views/fragments/footer.scala.html
@@ -8,14 +8,14 @@
     </div>
 
     <ul class="nav nav--stacked nav--top-border-off cf">
-    	<li>@fragments.mainSiteLink(page)</li>
-    	<li><a data-link-name="about" href="/help/insideguardian/2012/nov/26/guardian-launches-new-mobile-site">About this site</a></li>
+        <li>@fragments.mainSiteLink(page)</li>
+        <li><a data-link-name="about" href="/help/insideguardian/2012/nov/26/guardian-launches-new-mobile-site">About this site</a></li>
         <li><a data-link-name="help" href="/help/2012/nov/26/guardian-mobile-site">Help</a></li>
-    	<li><a data-link-name="contact" href="/help/contact-us">Contact us</a></li>
+        <li><a data-link-name="contact" href="/help/contact-us">Contact us</a></li>
         <li><a data-link-name="feedback" target="_blank" href="http://survey.omniture.com/d1/hosted/815f9cfba1">Feedback</a></li>
         <li>
             <span class="swipe-switches">
-                Swipe: 
+                Swipe:
                 <button class="swipe-switches__button swipe-switches__button--on"  data-link-name="switch-swipe-on">Turn ON</button>
                 <button class="swipe-switches__button swipe-switches__button--off" data-link-name="switch-swipe-off">Turn OFF</button>
             </span>
@@ -25,7 +25,7 @@
     <p>© Guardian News and Media Limited or its affiliated companies. All rights reserved.</p>
 
     <p>
-    	<a data-link-name="terms" href="/help/terms-of-service">Terms & conditions</a>
+        <a data-link-name="terms" href="/help/terms-of-service">Terms &amp; conditions</a>
         <a data-link-name="privacy" href="/help/privacy-policy">Privacy policy</a>
         <a data-link-name="cookie" href="/info/cookies">Cookie policy</a>
     </p>
